# svtplay-dl

./: .pre-commit-config.yaml  Pipfile  pyproject.toml  requirements-dev.txt  requirements.txt  versioneer.py
.github/workflows/: binaries.yaml  lint.yaml  tests.yaml
lib/svtplay_dl/: __init__.py  __version__.py
lib/svtplay_dl/fetcher/: dash.py  hls.py
lib/svtplay_dl/postprocess/: __init__.py
lib/svtplay_dl/service/: __init__.py  barnkanalen.py  dplay.py  svt.py  svtplay.py  tv4play.py  viaplay.py
lib/svtplay_dl/subtitle/: __init__.py
lib/svtplay_dl/utils/: nfo.py  output.py
